--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
           <button class="main-search__button" type="submit"></button>
         </form>
         <div class="main-header__user-menu user-menu">
-          <a href="#">Войти</a>
+          <a href="#" aria-label="Войти">Войти</a>
         </div>
-        <div class="main-header__compare-link"><a href="#">Сравнить</a></div>
-        <div class="main-header__kart-link"><a href="#">Корзина</a></div>
+        <div class="main-header__compare-link"><a href="#" aria-label="Сравнить">Сравнить</a></div>
+        <div class="main-header__kart-link"><a href="#" aria-label="Корзина">Корзина</a></div>
       </div>
       <div class="header-main-container">
         <ul class="main-header__site-navigation">
-          <li class="main-header__site-navigation-item"><a href="#">Каталог товаров</a>
-            <ul>
-              <li><a href="#">Виртуальная реальность</a></li>
-              <li><a href="#">Моноподы для селфи</a></li>
-              <li><a href="#">Экшн-камеры</a></li>
-              <li><a href="#">Фитнеc-браслеты</a></li>
-              <li><a href="#">Умные часы</a></li>
-              <li><a href="#">Квадрокоптеры</a></li>
+          <li class="main-header__site-navigation-item site-navigation-item"><a href="#" aria-label="Каталог товаров">Каталог товаров</a>
+            <ul class="site-navigation-item__submenu">
+              <li><a href="#" aria-label="Виртуальная реальность">Виртуальная реальность</a></li>
+              <li><a href="#" aria-label="Моноподы для селфи">Моноподы для селфи</a></li>
+              <li><a href="#" aria-label="Экшн-камеры">Экшн-камеры</a></li>
+              <li><a href="#" aria-label="Фитнеc-браслеты">Фитнеc-браслеты</a></li>
+              <li><a href="#" aria-label="Умные часы">Умные часы</a></li>
+              <li><a href="#" aria-label="Квадрокоптеры">Квадрокоптеры</a></li>
             </ul>
           </li>
-          <li class="main-header__site-navigation-item"><a href="#">Доставка</a></li>
-          <li class="main-header__site-navigation-item"><a href="#">Гарантия</a></li>
-          <li class="main-header__site-navigation-item"><a href="#">Контакты</a></li>
+          <li class="main-header__site-navigation-item"><a href="#" aria-label="Доставка">Доставка</a></li>
+          <li class="main-header__site-navigation-item"><a href="#" aria-label="Гарантия">Гарантия</a></li>
+          <li class="main-header__site-navigation-item"><a href="#" aria-label="Контакты">Контакты</a></li>
         </ul>
       </div>
     </header>
     <main>
       <div class="promo-slider">
-        <input id="slide-1-toggle" type="radio" name="toggle">
+        <input id="slide-1-toggle" type="radio" name="toggle" checked>
         <input id="slide-2-toggle" type="radio" name="toggle">
         <input id="slide-3-toggle" type="radio" name="toggle">
         <div class="promo-slider__toggle slider-toggle">
@@ -54,7 +54,7 @@
           <div>
             <p class="slide__slogan">Делай селфи, как Бен Стиллер!</p>
             <p class="slide__decription">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-            <a class="slide__about-product-link" href="#">Подробнее</a>
+            <a class="slide__about-product-link" href="#" aria-label="Подробнее">Подробнее</a>
             <table class="slide__product-property">
               <tr>
                 <td>8,5 м</td>
@@ -74,7 +74,7 @@
           <div>
             <p class="slide__slogan">Худеем правильно!</p>
             <p class="slide__decription">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a class="slide__about-product-link" href="#">Подробнее</a>
+            <a class="slide__about-product-link" href="#" aria-label="Подробнее">Подробнее</a>
             <table class="slide__product-property">
               <tr>
                 <td>48 часов</td>
@@ -90,7 +90,7 @@
           <div>
             <p class="slide__slogan">Порхает как бабочка, жалит как пчела!</p>
             <p class="slide__decription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-            <a class="slide__about-product-link" href="#">Подробнее</a>
+            <a class="slide__about-product-link" href="#" aria-label="Подробнее">Подробнее</a>
             <table class="slide__product-property">
               <tr>
                 <td>800 м</td>
@@ -103,6 +103,103 @@
             </table>
           </div>
         </div>
+      </div>
+      <section>
+        <h2 class="viseualli-hidden">Популярые разделы</h2>
+        <ul class="popular-sections">
+          <li class="popular-sections__item"><a href="#" aria-label="Виртуальная реальность">Виртуальная реальность</a></li>
+          <li class="popular-sections__item"><a href="#" aria-label="Моноподы для селфи">Моноподы для селфи</a></li>
+          <li class="popular-sections__item"><a href="#" aria-label="Экшн-камеры">Экшн-камеры</a></li>
+          <li class="popular-sections__item"><a href="#" aria-label="Фитнеc-браслеты">Фитнеc-браслеты</a></li>
+          <li class="popular-sections__item"><a href="#" aria-label="Умные часы">Умные часы</a></li>
+          <li class="popular-sections__item"><a href="#" aria-label="Квадрокоптеры">Квадрокоптеры</a></li>
+        </ul>
+      </section>
+      <section class="services-container">
+        <input id="delivery" type="radio" name="service" checked>
+        <input id="garanty" type="radio" name="service">
+        <input id="credit" type="radio" name="service">
+        <div class="services">
+          <div class="services__toggle">
+            <label class="delivery-toggle" for="delivery">Доствавка</label>
+            <label class="garanty-toggle" for="garanty">Гарантия</label>
+            <label class="credit-toggle" for="credit">Кредит</label>
+          </div>
+          <div class="services__items services-items">
+            <div class="services-items__item">
+              <h3 class="services-items__title">Доставка</h3>
+              <p class="services-items__content">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            </div>
+            <div class="services-items__item">
+              <h3 class="services-items__title">Гарантия</h3>
+              <p class="services-items__content">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+            </div>
+            <div class="services-items__item">
+              <h3 class="services-items__title">Кредит</h3>
+              <p class="services-items__content">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="popular-brands">
+        <h2 class="viseualli-hidden">Популярные бренды</h2>
+        <ul class="popular-brands__list brands-list">
+          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
+        </ul>
+      </section>
+      <div class="about-company">
+        <section class="about-us">
+          <h2 class="about-us__title">О компании</h2>
+          <p class="about-us__content">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="about-us__content">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+          <ul class="about-us__delivery-list">
+            <li>Деловые Линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="button" href="#" aria-label="Подробнее">Подробнее о нас</a>
+        </section>
+        <section class="contacts">
+          <h2 class="contacts__title">Контакты</h2>
+          <p class="contacts__content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+          <a class="contacts__map" href="#"><img src="#" width="" height="" alt="Магазин расположен по адресу г. Москва, ул. Строителей, 15"></a>
+        </section>
+        <footer class="main-footer">
+          <div class="main-footer__container-left">
+            <img class="main-footer__logo" src="#" width="" height="" alt="Логотип итернет-магазина Device">
+            <p class="main-footer__adress"></p>
+          </div>
+          <div class="main-footer__container-center">
+            <ul class="main-footer__site-navigation">
+              <li>Доставка</li>
+              <li>Гарантия</li>
+              <li>Контакты</li>
+            </ul>
+            <ul class="main-footer__social-buttons social-buttons">
+              <li><a class="social-buttons__item social-button__fb" href="#" aria-label="Мы в facebook">Фейсбук</a></li>
+              <li><a class="social-buttons__item social-button__inst" href="#" aria-label="Мы в Instagram">Инстаграм</a></li>
+              <li><a class="social-buttons__item social-button__tw" href="#" aria-label="Мы в Twitter">Твиттер</a></li>
+            </ul>
+          </div>
+          <div class="main-footer__container-right">
+            <div>
+              <div class="main-footer__user-menu user-menu">
+                <a class="user-menu__button" href="#" aria-label="Войти">Войти</a>
+              </div>
+              <div class="main-footer__compare-link">
+                <a href="#" aria-label="Сравнить">Сравнить</a>
+              </div>
+              <div class="main-footer__kart-link">
+                <a href="#" aria-label="Корзина">Корзина</a>
+              </div>
+            </div>
+            <p class="phone">Тел.: +7 (495) 495-95-95</p>
+            <p class="main-footer__site-developed"><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Разработчик сайта HTML Academy">Сайт разработан...</a></p>
+          </div>
+        </footer>
       </div>
     </main>
   </body>
