--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
           <div>
             <p class="slide__slogan">Делай селфи, как Бен Стиллер!</p>
             <p class="slide__decription">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-            <a class="slide__about-product-link" href="#">Подробнее</a>
+            <a class="slide__about-product-link" href="#" aria-label="Подробнее">Подробнее</a>
             <table class="slide__product-property">
               <tr>
                 <td>8,5 м</td>
@@ -167,40 +167,40 @@
           <p class="contacts__content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
           <a class="contacts__map" href="#"><img src="#" width="" height="" alt="Магазин расположен по адресу г. Москва, ул. Строителей, 15"></a>
         </section>
-      </div>
-      <footer class="main-footer">
-        <div class="main-footer__container-left">
-          <img class="main-footer__logo" src="#" width="" height="" alt="Логотип итернет-магазина Device">
-          <p class="main-footer__adress"></p>
-        </div>
-        <div class="main-footer__container-center">
-          <ul class="main-footer__site-navigation">
-            <li>Доставка</li>
-            <li>Гарантия</li>
-            <li>Контакты</li>
-          </ul>
-          <ul class="main-footer__social-buttons social-buttons">
-            <li><a class="social-buttons__item social-button__fb" href="#" aria-label="Мы в facebook">Фейсбук</a></li>
-            <li><a class="social-buttons__item social-button__inst" href="#" aria-label="Мы в Instagram">Инстаграм</a></li>
-            <li><a class="social-buttons__item social-button__tw" href="#" aria-label="Мы в Twitter">Твиттер</a></li>
-          </ul>
-        </div>
-        <div class="main-footer__container-right">
-          <div>
-            <div class="main-footer__user-menu user-menu">
-              <a class="user-menu__button user-menu__button_color_white" href="#">Войти</a>
-            </div>
-            <div class="compare-link main-footer__compare-link">
-              <a href="#">Сравнить</a>
-            </div>
-            <div class="kart-link main-footer__kart-link">
-              <a href="#">Корзина</a>
-            </div>
+        <footer class="main-footer">
+          <div class="main-footer__container-left">
+            <img class="main-footer__logo" src="#" width="" height="" alt="Логотип итернет-магазина Device">
+            <p class="main-footer__adress"></p>
           </div>
-          <p class="phone">Тел.: +7 (495) 495-95-95</p>
-          <p class="main-footer__site-developed"><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Разработчик сайта HTML Academy">Сайт разработан...</a></p>
-        </div>
-      </footer>
+          <div class="main-footer__container-center">
+            <ul class="main-footer__site-navigation">
+              <li>Доставка</li>
+              <li>Гарантия</li>
+              <li>Контакты</li>
+            </ul>
+            <ul class="main-footer__social-buttons social-buttons">
+              <li><a class="social-buttons__item social-button__fb" href="#" aria-label="Мы в facebook">Фейсбук</a></li>
+              <li><a class="social-buttons__item social-button__inst" href="#" aria-label="Мы в Instagram">Инстаграм</a></li>
+              <li><a class="social-buttons__item social-button__tw" href="#" aria-label="Мы в Twitter">Твиттер</a></li>
+            </ul>
+          </div>
+          <div class="main-footer__container-right">
+            <div>
+              <div class="main-footer__user-menu user-menu">
+                <a class="user-menu__button user-menu__button_color_white" href="#">Войти</a>
+              </div>
+              <div class="compare-link main-footer__compare-link">
+                <a href="#">Сравнить</a>
+              </div>
+              <div class="kart-link main-footer__kart-link">
+                <a href="#">Корзина</a>
+              </div>
+            </div>
+            <p class="phone">Тел.: +7 (495) 495-95-95</p>
+            <p class="main-footer__site-developed"><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Разработчик сайта HTML Academy">Сайт разработан...</a></p>
+          </div>
+        </footer>
+      </div>
     </main>
   </body>
 </html>
