ссылки страниц на друг друга

--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <header class="main-header">
-    <h1 class="viseualli-hidden">Интенет магазин гаджетов - DEVICE</h1>
-    <a class="logo main-header__logo">
+    <h1 class="viseualli-hidden">Интернет-магазин гаджетов - DEVICE</h1>
+    <a class="logo main-header__logo" href="index.html">
       <img src="#" width="163" height="34" alt="Логотип итернет-магазина Device">
     </a>
     <div class="header-top-container">
@@ -125,11 +125,12 @@
         </ul>
       </div>
     </section>
-
   </main>
   <footer class="main-footer">
     <div class="main-footer__container-left">
-      <img class="main-footer__logo" src="#" width="" height="" alt="Логотип итернет-магазина Device">
+      <a class="main-footer__logo" href="index.html">
+        <img  src="#" width="" height="" alt="Логотип итернет-магазина Device">
+      </a>
       <p class="main-footer__adress"></p>
     </div>
     <div class="main-footer__container-center">
