--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li class="main-header__site-navigation-item site-navigation-item"><a href="#" aria-label="Каталог товаров">Каталог товаров</a>
             <ul class="site-navigation-item__submenu">
               <li><a href="#">Виртуальная реальность</a></li>
-              <li><a href="#">Моноподы для селфи</a></li>
+              <li><a href="catalog.html">Моноподы для селфи</a></li>
               <li><a href="#">Экшн-камеры</a></li>
               <li><a href="#">Фитнеc-браслеты</a></li>
               <li><a href="#">Умные часы</a></li>
@@ -108,7 +108,7 @@
         <h2 class="viseualli-hidden">Популярые разделы</h2>
         <ul class="popular-sections">
           <li class="popular-sections__item"><a href="#">Виртуальная реальность</a></li>
-          <li class="popular-sections__item"><a href="#">Моноподы для селфи</a></li>
+          <li class="popular-sections__item"><a href="catalog.html">Моноподы для селфи</a></li>
           <li class="popular-sections__item"><a href="#">Экшн-камеры</a></li>
           <li class="popular-sections__item"><a href="#">Фитнеc-браслеты</a></li>
           <li class="popular-sections__item"><a href="#">Умные часы</a></li>
