Добавил картинки в слайдер

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <label class="slider-toggle__slide-3" for="slide-3-toggle"></label>
         </div>
         <div class="promo-slider__slide slide">
-          <img src="#" width="" height="" alt="Избражение селфи-палки">
+          <img src="img/image-selfy.png" width="383" height="486" alt="Избражение селфи-палки">
           <div>
             <p class="slide__slogan">Делай селфи, как Бен Стиллер!</p>
             <p class="slide__decription">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="promo-slider__slide slide">
-          <img src="#" width="" height="" alt="Избражение фитнес браслета">
+          <img src="img/image-whatch.png" width="344" height="485" alt="Избражение фитнес браслета">
           <div>
             <p class="slide__slogan">Худеем правильно!</p>
             <p class="slide__decription">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="promo-slider__slide slide">
-          <img src="#" width="" height="" alt="Избражение селфи-палки">
+          <img src="img/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
           <div>
             <p class="slide__slogan">Порхает как бабочка, жалит как пчела!</p>
             <p class="slide__decription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
