добавил изображения и икнонки, подключил часть изображений

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <h1 class="viseualli-hidden">Интернет-магазин гаджетов - DEVICE</h1>
     <a class="logo main-header__logo" href="index.html">
-      <img src="#" width="163" height="34" alt="Логотип итернет-магазина Device">
+      <img src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
     </a>
     <div class="header-top-container">
       <form class="main-header__main-search main-search">
@@ -95,22 +95,22 @@
       </div>
       <div class="catalog">
         <article class="catalog__item catalog-item">
-          <img class="catalog-item__image" src="#" width="" height="" alt="Изображение любительской селфи-палки">
+          <img class="catalog-item__image" src="img/catalog/selfie-stick.jpg" width="360" height="380" alt="Изображение любительской селфи-палки">
           <h3 class="catalog-item__title">Любительская селфи-палка</h3>
           <span>500 руб.</span>
         </article>
         <article class="catalog__item catalog-item">
-          <img class="catalog-item__image" src="#" width="" height="" alt="Изображение профессиональной селфи-палки">
+          <img class="catalog-item__image" src="img/catalog/selfie-stick-professional.jpg" width="360" height="380" alt="Изображение профессиональной селфи-палки">
           <h3 class="catalog-item__title">Профессиональная селфи-палка</h3>
           <span>1 500 руб.</span>
         </article>
         <article class="catalog__item catalog-item">
-          <img class="catalog-item__image" src="#" width="" height="" alt="Изображение непотопляемой селфи-палки">
+          <img class="catalog-item__image" src="img/catalog/selfie-stick-unsinkable.jpg" width="360" height="380" alt="Изображение непотопляемой селфи-палки">
           <h3 class="catalog-item__title">Непотопляемая селфи-палка</h3>
           <span>2 500 руб.</span>
         </article>
         <article class="catalog__item catalog-item">
-          <img class="catalog-item__image" src="#" width="" height="" alt="Изображение селфи-палки «Следуй за мной»">
+          <img class="catalog-item__image" src="img/catalog/selfie-stick-followme.jpg" width="360" height="380" alt="Изображение селфи-палки «Следуй за мной»">
           <h3 class="catalog-item__title">Селфи-палка «Следуй за мной»</h3>
           <span>4 900 руб.</span>
         </article>
@@ -129,7 +129,8 @@
   <footer class="main-footer">
     <div class="main-footer__container-left">
       <a class="main-footer__logo" href="index.html">
-        <img  src="#" width="" height="" alt="Логотип итернет-магазина Device">
+        <img class="main-footer__logo" src="img/logo-footer.png" width="136" height="36" alt="Логотип интернет-магазина Device">
+        <p class="main-footer__adress"></p>
       </a>
       <p class="main-footer__adress"></p>
     </div>
