--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>Итернет-магазин гаджетов - DEVICE</title>
+    <title>Интернет-магазин гаджетов - DEVICE</title>
   </head>
   <body>
     <header class="main-header">
-      <h1 class="viseualli-hidden">Интенет магазин гаджетов - DEVICE</h1>
+      <h1 class="viseualli-hidden">Интернет магазин гаджетов - DEVICE</h1>
       <a class="logo main-header__logo">
-        <img src="#" width="163" height="34" alt="Логотип итернет-магазина Device">
+        <img src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
       </a>
       <div class="header-top-container">
         <form class="main-header__main-search main-search">
@@ -52,7 +52,7 @@
           <label class="slider-toggle__slide-3" for="slide-3-toggle"></label>
         </div>
         <div class="promo-slider__slide slide">
-          <img src="img/image-selfy.png" width="383" height="486" alt="Избражение селфи-палки">
+          <img src="img/promo-slider/image-selfie.png" width="384" height="486" alt="Избражение селфи-палки">
           <div>
             <p class="slide__slogan">Делай селфи, как Бен Стиллер!</p>
             <p class="slide__decription">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="promo-slider__slide slide">
-          <img src="img/image-whatch.png" width="344" height="485" alt="Избражение фитнес браслета">
+          <img src="img/promo-slider/image-whatch.png" width="345" height="485" alt="Избражение фитнес браслета">
           <div>
             <p class="slide__slogan">Худеем правильно!</p>
             <p class="slide__decription">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="promo-slider__slide slide">
-          <img src="img/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
+          <img src="img/promo-slider/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
           <div>
             <p class="slide__slogan">Порхает как бабочка, жалит как пчела!</p>
             <p class="slide__decription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -146,10 +146,10 @@
       <section class="popular-brands">
         <h2 class="viseualli-hidden">Популярные бренды</h2>
         <ul class="popular-brands__list brands-list">
-          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
-          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
-          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
-          <li class="brands-list__item"><a href="#"><img src="#" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="brands/dji.png" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="brands/sp-gadjets.png" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="brands/gopro.png" width="" height="" alt=""></a></li>
+          <li class="brands-list__item"><a href="#"><img src="brands/vive.png" width="" height="" alt=""></a></li>
         </ul>
       </section>
       <div class="about-company">
@@ -167,12 +167,12 @@
         <section class="contacts">
           <h2 class="contacts__title">Контакты</h2>
           <p class="contacts__content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <a class="contacts__map" href="#"><img src="#" width="" height="" alt="Магазин расположен по адресу г. Москва, ул. Строителей, 15"></a>
+          <a class="contacts__map" href="#"><img src="contacts/map.jpg" width="" height="" alt="Магазин расположен по адресу г. Москва, ул. Строителей, 15"></a>
         </section>
       </div>
       <footer class="main-footer">
         <div class="main-footer__container-left">
-          <img class="main-footer__logo" src="#" width="" height="" alt="Логотип итернет-магазина Device">
+          <img class="main-footer__logo" src="img/logo-footer.png" width="136" height="36" alt="Логотип интернет-магазина Device">
           <p class="main-footer__adress"></p>
         </div>
         <div class="main-footer__container-center">
