--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title>Итернет-магазин гаджетов - DEVICE</title>
 </head>
 <body>
