--- a/index.html
+++ b/index.html
@@ -3,42 +3,45 @@
 <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <title>Интернет-магазин гаджетов - DEVICE</title>
 </head>
 <body>
-  <header class="main-header">
-    <h1 class="viseualli-hidden">Интернет магазин гаджетов - DEVICE</h1>
-    <a class="logo main-header__logo">
-      <img src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
-    </a>
-    <div class="header-top-container">
-      <form class="main-header__main-search main-search">
-        <input type="text" name="main-search" placeholder="Поиск по сайту">
-        <button class="main-search__button" type="submit"></button>
-      </form>
-      <div class="main-header__user-menu user-menu">
-        <a class="user-menu__button user-menu__button_color_black" href="#">Войти</a>
+  <header class="header">
+    <div class="header__wrapper">
+      <h1 class="visually-hidden">Интернет магазин гаджетов - DEVICE</h1>
+      <a class="header__logo logo">
+        <img src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
+      </a>
+      <div class="header__header-top header-top">
+        <form class="header-top__main-search main-search">
+          <input class="main-search__input" type="text" name="main-search" placeholder="Поиск по сайту">
+          <button class="main-search__button" type="submit"></button>
+        </form>
+        <div class="header-top__user-menu user-menu">
+          <a class="user-menu__button user-menu__button_color_black" href="#">Войти</a>
+        </div>
+        <div class="header-top__compare-link compare-link"><a href="#">Сравнить</a></div>
+        <div class="header-top__kart-link kart-link"><a href="#">Корзина</a></div>
       </div>
-      <div class="compare-link main-header__compare-link"><a href="#">Сравнить</a></div>
-      <div class="kart-link main-header__kart-link"><a href="#">Корзина</a></div>
-    </div>
-    <div class="header-main-container">
-      <ul class="main-header__site-navigation">
-        <li class="main-header__site-navigation-item site-navigation-item"><a href="#" aria-label="Каталог товаров">Каталог товаров</a>
-          <ul class="site-navigation-item__submenu">
-            <li><a href="#">Виртуальная реальность</a></li>
-            <li><a href="catalog.html">Моноподы для селфи</a></li>
-            <li><a href="#">Экшн-камеры</a></li>
-            <li><a href="#">Фитнеc-браслеты</a></li>
-            <li><a href="#">Умные часы</a></li>
-            <li><a href="#">Квадрокоптеры</a></li>
-          </ul>
-        </li>
-        <li class="main-header__site-navigation-item"><a href="#">Доставка</a></li>
-        <li class="main-header__site-navigation-item"><a href="#">Гарантия</a></li>
-        <li class="main-header__site-navigation-item"><a href="#">Контакты</a></li>
-      </ul>
+      <div class="header-main">
+        <ul class="main-header__site-navigation">
+          <li class="main-header__site-navigation-item site-navigation-item"><a href="#" aria-label="Каталог товаров">Каталог товаров</a>
+            <ul class="site-navigation-item__submenu">
+              <li><a href="#">Виртуальная реальность</a></li>
+              <li><a href="catalog.html">Моноподы для селфи</a></li>
+              <li><a href="#">Экшн-камеры</a></li>
+              <li><a href="#">Фитнеc-браслеты</a></li>
+              <li><a href="#">Умные часы</a></li>
+              <li><a href="#">Квадрокоптеры</a></li>
+            </ul>
+          </li>
+          <li class="main-header__site-navigation-item"><a href="#">Доставка</a></li>
+          <li class="main-header__site-navigation-item"><a href="#">Гарантия</a></li>
+          <li class="main-header__site-navigation-item"><a href="#">Контакты</a></li>
+        </ul>
+      </div>
     </div>
   </header>
   <main>
@@ -177,9 +180,9 @@
       </div>
       <div class="main-footer__container-center">
         <ul class="main-footer__site-navigation">
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Контакты</li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="main-footer__social-buttons social-buttons">
           <li><a class="social-buttons__item social-button__fb" href="#" aria-label="Мы в facebook">Фейсбук</a></li>
